# astronote

./: Makefile.toml  README.md  TODO.md
astronote-cli/: Cargo.toml
astronote-cli/src/: cli.rs  config.rs  main.rs
astronote-core/: Cargo.toml  build.rs
astronote-core/migrations/: 0001-create-note-table.rs  0001_create-note-table.sql
astronote-core/src/: lib.rs
astronote-core/src/db/: mod.rs  ron.rs  sqlite.rs
astronote-core/src/schedulers/: mod.rs  sm2.rs
